# blindai

./: .earthlyignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Earthfile  README.md  client.py  docker-compose.yml  host_server.key  host_server.pem  justfile  manifest.dev.template.toml  mkdocs.yml  policy.dev.template.toml  policy.prod.template.toml  rust-toolchain.toml
.cargo/: config
.devcontainer/: Dockerfile  ci_tests.sh  devcontainer.json  hw-start.sh  setup-pccs.sh  start-aesmd.sh
.earthly/: config.yml  docker-auto-install.sh
.github/: pull_request_template.md  pypi-release.dockerfile  sgxs-release.dockerfile  test.dockerfile  unit-tests.dockerfile
client/: .coveragerc  .gitignore  CHANGELOG  CMakeLists.txt  MANIFEST.in  README.md  mypy.ini  proto  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_tokenizers.py  tokenizers_demo.py
client/blindai/: __init__.py  _certificate_pinning.py  _dcap_attestation.py  _nitro_attestation.py  _preprocess_audio.py  api.py  audio.py  client.py  completion.py  dcap_attestation.py  nitro_client.py  supported_server_versions.py  testing.py  version.py  wrapper.cc
client/blindai/cpp/: wrapper.cc
client/blindai/pb2/: __ini__.py  securedexchange_pb2.py  securedexchange_pb2_grpc.py  untrusted_pb2.py  untrusted_pb2_grpc.py
client/blindai/stub/: __ini__.py
client/blindai/tls/: mithril_services_ca.pem  mithril_services_policy.toml
client/blindai/utils/: __init__.py  errors.py  serialize.py  utils.py
client/blindai_preview/: Intel_SGX_Provisioning_Certification_RootCA.pem  __init__.py  _dcap_attestation.py  _whisper_params.py  audio.py  client.py  core.py  testing.py  utils.py
client/blindaiv2_client_alpha/: client.py
client/client/: client.py  distilbert_setup.py  sample_client.py  utils.py
client/docs/: interface.md
client/examples/: simple.py
client/proto/: attestation.proto  data.proto  identity.proto  licensing.proto  proof_files.proto  securedexchange.proto  untrusted.proto
client/scripts/: buildAttestationLib.ps1  buildAttestationLib.sh  buildAttestationLibDarwin.sh  buildDarwinWheels.sh  buildLinuxWheels.sh  build_linux_wheels  build_linux_wheels.sh  clean  edit_runpath  postBuildAttestationLib.ps1  postExtensionBuild.sh  postExtensionBuildDarwin.sh
client/tests/: .gitignore  covidnet.npz  covidnet.py  exec_run.proof  exec_upload.proof  get_onnx_metadata.py  host_server.pem  integration_test.py  nitro_attestation_document_valid.cbor  nitro_attestation_test.py  policy.toml  tensors_test.py  test_dcap.py  test_proof.py  test_requests.py
client/tutorial/: example.py  host_server.pem  policy.toml  run_model.py  upload_model.py
devcontainer-nitro/: devcontainer.json  post_create_command.sh
devenvironment/: .env.vars  sgx-install.sh
docs/: generate_api_reference.sh  index.md  notebook_seo.sh  readme.md  remote_attestation.md  requirements.in  requirements.txt  threat_model.md
examples/: .dockerignore  BlindAI-DistilBERT-Simulation.ipynb  README.md  assert_correctness.py  host_server.pem  policy.toml
remote_attestation_sgx/: Cargo.toml  build.rs
runner/: Cargo.toml
runner/remote_attestation_sgx/: Cargo.toml  build.rs
runner/remote_attestation_sgx/src/: dcap_quote_provider.rs  lib.rs  quote_generation.rs  quote_verification_collateral.rs
runner/src/: main.rs
server/: .dockerignore  .gitignore  .gitmodules  CHANGELOG  Cargo.toml  Makefile  README.md  RUNNING.md  sgx_buildenv.mk
server/.cargo/: config.toml
server/blindai_app/: Cargo.toml  Makefile  build.rs  logo.txt
server/blindai_app/src/: dcap.rs  main.rs
server/blindai_common/: Cargo.toml
server/blindai_common/src/: lib.rs
server/blindai_rpc/: Cargo.toml
server/blindai_rpc/src/: lib.rs
server/blindai_sgx/: Cargo.toml  Enclave.config.xml  Enclave.high_memory.xml  Enclave.low_memory.xml  Makefile  Xargo.toml  build.rs  config.toml  rust-toolchain
server/blindai_sgx/src/: auth.rs  client_communication.rs  dcap_quote_provider.rs  identity.rs  lib.rs  model.rs  model_store.rs  sealing.rs  telemetry.rs  untrusted.rs
server/blindai_sgx_attestation/: Cargo.toml  Makefile
server/blindai_sgx_attestation/src/: platform.rs
server/docker/: build.dockerfile  build.sh  common-dev.sh  hardware-dcsv3.sh  hardware-start.sh  install-zsh.sh  software-start.sh
server/docker/hardware/: hardware-ubuntu-1804.dockerfile  start.sh
server/docker/software/: software-ubuntu-1804.dockerfile  start.sh
server/inference-server/api/proto/: securedexchange.proto  untrusted.proto
server/inference-server/attestation/sgx/: Cargo.toml  Makefile
server/inference-server/attestation/sgx/src/: _verifier.rs  attestation.rs  cert.rs  lib.rs  ocall.rs  platform.rs  report.rs  service.rs  types.rs
server/inference-server/network/sgx/common/: Cargo.toml
server/inference-server/network/sgx/common/src/: lib.rs
server/inference-server/network/sgx/rpc/: Cargo.toml
server/inference-server/network/sgx/rpc/src/: lib.rs
server/inference-server/scheduler/trusted/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml  build.rs  common  config.toml
server/inference-server/scheduler/trusted/src/: client_communication.rs  dcap_quote_provider.rs  identity.rs  lib.rs  telemetry.rs  untrusted.rs
server/inference-server/scheduler/untrusted/: Cargo.toml  Makefile  build.rs  rustfmt.toml
server/inference-server/scheduler/untrusted/src/: dcap.rs  main.rs  self_signed_tls.rs
server/proto/: attestation.proto  dispatcher.proto  identity.proto  proof_files.proto  securedexchange.proto  untrusted.proto
server/tools/: gen_enclave_info_toml.py
server_nitro/: README.md
server_sgx/: Cargo.toml  build.rs  justfile  manifest.prod.template.toml  rust-toolchain.toml
src/: client.py  client_communication.rs  find_split_index.rs  identity.rs  main.rs  model.rs  model_store.rs  sample_client.py  telemetry.rs  ureq_dns_resolver.rs
test/: test.py
tests/: Dockerfile  README.md  __init__.py  assert_all.sh  assert_correctness.py  generate_all_onnx_and_npz.sh  server.py  (+10 more)
(+172 files in other folders)
