[package]
name = "tinyhttp-fortanix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weak-table = "0.3.2"
anyhow = "=1.0.45"
bytes = "0.4.12"
der-parser = "*"
env_logger = {version = "*", default-features = false}
futures = "0.3.17"
hex = "*"
log = {features = ["release_max_level_trace"]}
num-derive = "0.3.3"
num-traits = "0.2.14"
pkix = "0.1.1"
rand = "*"
rcgen = {version = "0.8.13", default-features = false, features=["pem"]}
ring = "0.16.20"
ring-compat = "0.4.0"
rsa = {version = "0.5.0"}
serde = "1.0.130"
serde_cbor = "=0.11.1"
serde_derive = "1.0.68"
toml = "*"
uuid = {version="0.8.2", features=["v4", "serde"]}
tract-core = {path="tract/core"} #{version = "0.17.2-pre", features=["untrusted_fs"]}
tract-onnx = {path="tract/onnx"} #{version = "0.17.2-pre", features=["untrusted_fs"]}
tract-hir = {path="tract/hir"}  #{version = "0.17.2-pre"}
x509-parser = "0.11.0"
int-enum = "0.5.0"
# enable TLS support via rustls
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }

[patch.crates-io]
# tiny http uses ring which needs to be patched to work properly 
# and securely in SGX target
ring = {path="ring-fortanix"}
# { git = 'ssh://git@github.com/mithril-security/ring.git', branch="fortanix-target"}


[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x400000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x7BA00000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=20
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=false
