[package]
name = "blindai_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
der-parser = "8.1.0"
env_logger = {version = "0.9.3", default-features = false}
hex = "0.4.3"
log = {version = "0.4.17", features = ["release_max_level_trace"]}
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
rcgen = {version = "0.10.0", default-features = false, features=["pem"]}
ring = "0.16.20"
ring-compat = "0.4.1"
rsa = "0.6.1"
serde = "1.0.147"
serde_cbor = "0.11.2"
serde_derive = "1.0.147"
uuid = {version="1.2.1", features=["v4", "serde"]}
tract-core = {path="tract/core"} #{version = "0.17.2-pre", features=["untrusted_fs"]}
tract-onnx = {path="tract/onnx"} #{version = "0.17.2-pre", features=["untrusted_fs"]}
tract-hir = {path="tract/hir"}  #{version = "0.17.2-pre"}
x509-parser = "0.14.0"
# enable TLS support via rustls
rouille = { git = "https://github.com/mithril-security/rouille-sgx.git", features = ["ssl"] }

[dev-dependencies]
lazy_static = "1.4.0"
image = "0.24.1"

[patch.crates-io]
# tiny http uses ring which needs to be patched to work properly 
# and securely in SGX target
ring = {path="ring-fortanix"}
serde_cbor = { git = "https://github.com/mithril-security/cbor.git" }
# { git = 'ssh://git@github.com/mithril-security/ring.git', branch="fortanix-target"}


[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x400000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0xFBA00000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=20
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=false
