[tool.poetry]
name = "blindai-preview"
version = "0.0.4"
description = ""
authors = ["Corentin Lauverjat <corentin.lauverjat@mithrilsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cbor2 = "^5.4.3"
cryptography = "^38.0.3"
numpy = "^1.23.5,<1.24"
torch = { version = "^1.13.0", optional = true }
sgx-dcap-quote-verify-python = "^0.0.2"
toml = "^0.10.2"
pydantic = "^1.10.4"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
transformers = "^4.24.0"
onnxsim = "^0.4.10"
facenet-pytorch = "^2.5.2"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
onnxruntime = "^1.13.1"
librosa = "^0.9.2"
runcmd = "^2020.12.3"
black = "^22.12.0"
coverage = "^7.0.2"

[tool.poetry.extras]
torch = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
