[workspace]

members = ["remote_attestation_sgx"]

[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesm-client = {version ="0.5.4", features = ["sgxs"] }
enclave-runner = "0.5.1"
sgxs-loaders = "0.3.3"
remote_attestation_sgx = {path = "remote_attestation_sgx/"}
env_logger = "0.10.0"