cargo-features = ["resolver"]
[workspace]

resolver = "2"

members = [
    "inference-server/scheduler/trusted",
    "inference-server/attestation/sgx/",
]

exclude = ["sdk", "inference-server/scheduler/untrusted", "inference-server/network/sgx/rpc", "inference-server/network/sgx/common"]

[patch.crates-io]
ring = { git = "ssh://git@github.com/mithril-security/ring.git", branch = "sgx-target" }
httparse = { git = "ssh://git@github.com/mithril-security/httparse-sgx.git" }
socket2 = { git = "ssh://git@github.com/mithril-security/socket2-sgx.git", tag = "v0.4.2-sgx" }
mio = { git = "ssh://git@github.com/mithril-security/mio-sgx.git", branch="sgx-mio" }
rustls = { git = 'ssh://git@github.com/mithril-security/rustls-sgx', branch = "rustls-sgx" }
tokio = { git = 'ssh://git@github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx" }
tokio-util = { git = 'ssh://git@github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx" }
futures = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-core = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-channel = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-executor = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-io = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-macro = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-sink = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-task = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-util = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-test = { git = 'ssh://git@github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
tracing-core  = {  git = 'ssh://git@github.com/mithril-security/tracing-sgx', branch = "tracing-core-sgx" }
h2 = { git = 'ssh://git@github.com/mithril-security/h2-sgx', branch = "h2-sgx" }
tower = { git = 'ssh://git@github.com/mithril-security/tower-sgx', branch = "tower-sgx" }
hyper = { git = 'ssh://git@github.com/mithril-security/hyper-sgx', tag = "v0.14.13-sgx" }
serde = { git = 'ssh://git@github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx" }
serde_derive = { git = 'ssh://git@github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx" }
anyhow = { git = 'ssh://git@github.com/mithril-security/anyhow-xargo-sgx.git', tag = "1.0.45-sgx" }
env_logger = { git = "ssh://git@github.com/mithril-security/env_logger-sgx.git" , tag = "v0.9.0-sgx" }
b64-ct = { git = "ssh://git@github.com/mithril-security/b64-ct.git", tag = "v0.1.1-sgx" }
image = { git = 'ssh://git@github.com/mithril-security/image-sgx', branch = "target-sgx" }
scoped_threadpool = { git = 'ssh://git@github.com/mithril-security/scoped-threadpool-rs-sgx', branch = "target-sgx" }
crossbeam-utils = { git = 'ssh://git@github.com/mithril-security/crossbeam-sgx' }
crossbeam-channel = { git = 'ssh://git@github.com/mithril-security/crossbeam-sgx' }
rayon = { git = 'ssh://git@github.com/mithril-security/rayon-sgx', branch = "target-sgx" }
flume = { git = 'ssh://git@github.com/mithril-security/flume-sgx', branch = "target-sgx" }
threadpool = { git = 'ssh://git@github.com/mithril-security/threadpool-sgx', branch = "target-sgx" }
exr = { git = 'ssh://git@github.com/mithril-security/exrs-sgx', branch = "target-sgx" }
num-bigint-dig = { git = "ssh://git@github.com/dignifiedquire/num-bigint.git", rev="56576b592fea6341b7e1711a1629e4cc1bfc419c"}
tar = { git = "ssh://git@github.com/mithril-security/tar-rs-sgx.git", tag = "0.4.33x"}
oid-registry = { git = "ssh://git@github.com/mithril-security/oid-registry-sgx.git", tag = "oid-registry-0.2.0-sgx" }
rsa = {git = "ssh://git@github.com/mithril-security/rsa-sgx.git", branch = "target-sgx"}
pkcs1 = { git = "ssh://git@github.com/mithril-security/formats-sgx.git", tag = "pkcs1/v0.2.4-sgx" }
pkcs8 = { git = "ssh://git@github.com/mithril-security/formats-sgx.git", tag = "pkcs8/v0.7.6-sgx" }