cargo-features = ["resolver"]
[workspace]

resolver = "2"

members = [
    "inference-server/scheduler/trusted",
    "inference-server/attestation/sgx/",
]

exclude = ["sdk", "inference-server/scheduler/untrusted", "inference-server/network/sgx/rpc", "inference-server/network/sgx/common"]

[patch.crates-io]
ring = { git = "https://github.com/mithril-security/ring.git", branch = "sgx-target" }
httparse = { git = "https://github.com/mithril-security/httparse-sgx.git" }
socket2 = { git = "https://github.com/mithril-security/socket2-sgx.git", tag = "v0.4.2-sgx" }
mio = { git = "https://github.com/mithril-security/mio-sgx.git", branch="sgx-mio" }
rustls = { git = 'https://github.com/mithril-security/rustls-sgx', branch = "rustls-sgx" }
tokio = { git = 'https://github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx" }
tokio-util = { git = 'https://github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx" }
futures = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-core = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-channel = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-executor = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-io = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-macro = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-sink = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-task = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-util = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
futures-test = { git = 'https://github.com/mithril-security/futures-sgx', branch = "futures-sgx" }
tracing-core  = {  git = 'https://github.com/mithril-security/tracing-sgx', branch = "tracing-core-sgx" }
h2 = { git = 'https://github.com/mithril-security/h2-sgx', branch = "h2-sgx" }
tower = { git = 'https://github.com/mithril-security/tower-sgx', branch = "tower-sgx" }
hyper = { git = 'https://github.com/mithril-security/hyper-sgx', tag = "v0.14.13-sgx" }
serde = { git = 'https://github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx" }
serde_derive = { git = 'https://github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx" }
anyhow = { git = 'https://github.com/mithril-security/anyhow-xargo-sgx.git', tag = "1.0.45-sgx" }
env_logger = { git = "https://github.com/mithril-security/env_logger-sgx.git" , tag = "v0.9.0-sgx" }
b64-ct = { git = "https://github.com/mithril-security/b64-ct.git", tag = "v0.1.1-sgx" }
num-bigint-dig = { git = "https://github.com/dignifiedquire/num-bigint.git", rev="56576b592fea6341b7e1711a1629e4cc1bfc419c"}
tar = { git = "https://github.com/mithril-security/tar-rs-sgx.git", tag = "0.4.33x"}
oid-registry = { git = "https://github.com/mithril-security/oid-registry-sgx.git", tag = "oid-registry-0.2.0-sgx" }
rsa = {git = "https://github.com/mithril-security/rsa-sgx.git", branch = "target-sgx"}
pkcs1 = { git = "https://github.com/mithril-security/formats-sgx.git", tag = "pkcs1/v0.2.4-sgx" }
pkcs8 = { git = "https://github.com/mithril-security/formats-sgx.git", tag = "pkcs8/v0.7.6-sgx" }