cargo-features = ["resolver"]
[workspace]

resolver = "2"

members = [
  "blindai_app",
  "blindai_common",
  "blindai_rpc",
  "blindai_sgx",
  "blindai_sgx_attestation",
]

exclude = ["sgx_sdk"]

[patch.crates-io]
anyhow = {git = 'https://github.com/mithril-security/anyhow-xargo-sgx.git', tag = "1.0.45-sgx"}
b64-ct = {git = "https://github.com/mithril-security/b64-ct.git", tag = "v0.1.1-sgx"}
env_logger = {git = "https://github.com/mithril-security/env_logger-sgx.git", tag = "v0.9.0-sgx"}
futures = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-channel = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-core = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-executor = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-io = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-macro = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-sink = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-task = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-test = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
futures-util = {git = 'https://github.com/mithril-security/futures-sgx', tag = "0.3.21-sgx"}
h2 = {git = 'https://github.com/mithril-security/h2-sgx', branch = "h2-sgx"}
httparse = {git = "https://github.com/mithril-security/httparse-sgx.git"}
hyper = {git = 'https://github.com/mithril-security/hyper-sgx', tag = "v0.14.13-sgx"}
mio = {git = "https://github.com/mithril-security/mio-sgx.git", branch = "sgx-mio"}
num-bigint-dig = {git = "https://github.com/dignifiedquire/num-bigint.git", rev = "56576b592fea6341b7e1711a1629e4cc1bfc419c"}
oid-registry = {git = "https://github.com/mithril-security/oid-registry-sgx.git", tag = "oid-registry-0.2.0-sgx"}
pkcs1 = {git = "https://github.com/mithril-security/formats-sgx.git", tag = "pkcs1/v0.2.4-sgx"}
pkcs8 = {git = "https://github.com/mithril-security/formats-sgx.git", tag = "pkcs8/v0.7.6-sgx"}
ring = {git = "https://github.com/mithril-security/ring.git", branch = "sgx-target"}
rsa = {git = "https://github.com/mithril-security/rsa-sgx.git", branch = "target-sgx"}
rustls = {git = 'https://github.com/mithril-security/rustls-sgx', branch = "rustls-sgx"}
serde = {git = 'https://github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx"}
serde_derive = {git = 'https://github.com/mithril-security/serde-xargo-sgx.git', tag = "v1.0.130-sgx"}
socket2 = {git = "https://github.com/mithril-security/socket2-sgx.git", tag = "v0.4.2-sgx"}
tar = {git = "https://github.com/mithril-security/tar-rs-sgx-xargo.git", tag = "0.4.38"}
tokio = {git = 'https://github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx"}
tokio-util = {git = 'https://github.com/mithril-security/tokio-sgx', tag = "tokio-1.12.0-sgx"}
tonic-rpc = {git = "https://github.com/mithril-security/tonic-rpc.git", branch = "main"}
tower = {git = 'https://github.com/mithril-security/tower-sgx', branch = "tower-sgx"}
tracing-core = {git = 'https://github.com/mithril-security/tracing-sgx', branch = "tracing-core-sgx"}
tract-core = {git = "https://github.com/mithril-security/tract-sgx-xargo.git", tag = "0.16.6-pre-interpolation-nearest-bump-tar"}
tract-onnx = {git = "https://github.com/mithril-security/tract-sgx-xargo.git", tag = "0.16.6-pre-interpolation-nearest-bump-tar"}

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = {path = "./sgx_sdk/sgx_alloc"}
sgx_build_helper = {path = "./sgx_sdk/sgx_build_helper"}
sgx_cov = {path = "./sgx_sdk/sgx_cov"}
sgx_crypto_helper = {path = "./sgx_sdk/sgx_crypto_helper"}
sgx_libc = {path = "./sgx_sdk/sgx_libc"}
sgx_rand = {path = "./sgx_sdk/sgx_rand"}
sgx_rand_derive = {path = "./sgx_sdk/sgx_rand_derive"}
sgx_serialize = {path = "./sgx_sdk/sgx_serialize"}
sgx_serialize_derive = {path = "./sgx_sdk/sgx_serialize_derive"}
sgx_serialize_derive_internals = {path = "./sgx_sdk/sgx_serialize_derive_internals"}
sgx_tcrypto = {path = "./sgx_sdk/sgx_tcrypto"}
sgx_tcrypto_helper = {path = "./sgx_sdk/sgx_tcrypto_helper"}
sgx_tdh = {path = "./sgx_sdk/sgx_tdh"}
sgx_tkey_exchange = {path = "./sgx_sdk/sgx_tkey_exchange"}
sgx_tprotected_fs = {path = "./sgx_sdk/sgx_tprotected_fs"}
sgx_trts = {path = "./sgx_sdk/sgx_trts"}
sgx_tse = {path = "./sgx_sdk/sgx_tse"}
sgx_tseal = {path = "./sgx_sdk/sgx_tseal"}
sgx_tstd = {path = "./sgx_sdk/sgx_tstd"}
sgx_tunittest = {path = "./sgx_sdk/sgx_tunittest"}
sgx_types = {path = "./sgx_sdk/sgx_types"}
sgx_ucrypto = {path = "./sgx_sdk/sgx_ucrypto"}
sgx_unwind = {path = "./sgx_sdk/sgx_unwind"}
sgx_urts = {path = "./sgx_sdk/sgx_urts"}
