[package]
name = "remote_attestation_sgx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dcap-ql = "0.3.4"
sgx-isa = "0.4.0"
bytes = "1.2.1"
x509-parser = "0.12.0"
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"]}
base16 = "0.2.1"
der-parser = "6.0.0"
pem = "1.1.0"
sgx_pkix = "0.1.2"
reqwest = "0.11.12"
hex = "0.4.3"
urlencoding = "2.1.2"
libc = "0.2.134"
aesm-client = "0.5.4"
serde_json = "1.0.87"
tiny_http = "0.12.0"
log = "0.4.17"

[lib]
name = "remote_attestation_sgx"
path = "src/lib.rs"