[package]
name = "remote_attestation_sgx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesm-client = "0.5.4"
dcap-ql = "0.3.4"
sgx-isa = {version = "0.4.0", features = ["serde"] }
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.87"
urlencoding = "2.1.2"
x509-parser = "0.15.0"
der-parser = "8.1.0"
pem = "2.0.1"
sgx_pkix = "0.2.1"
base16 = "0.2.1"
ureq = "2.6.1"
log = "0.4.17"

axum = {version = "0.6.2", features = ["macros"]}
tokio = { version = "1.24.1", features = ["rt", "macros"] }
hex = "0.4.3"

[lib]
name = "remote_attestation_sgx"
path = "src/lib.rs"
