[package]
authors = ["Mithril Security"]
edition = "2018"
license = "Apache-2.0"
name = "blindai_rpc"
version = "0.5.7"

[dependencies]
tokio = {version = "1.0", features = ["rt"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5.2"
tonic-rpc = {version = "0.1.1", features = ["json"]}
