[package]
authors = ["Mithril Security"]
edition = "2021"
license = "Apache-2.0"
name = "blindai_sgx"
version = "0.5.6"

[lib]
crate-type = ["staticlib"]
name = "blindai_sgx"

[features]
default = []

[dependencies]
weak-table = "0.3.2"
anyhow = "=1.0.45"
base64 = "0.13.0"
blindai_common = {path = "../blindai_common"}
blindai_rpc = {path = "../blindai_rpc"}
blindai_sgx_attestation = {path = '../blindai_sgx_attestation'}
der-parser = "*"
env_logger = {version = "*", default-features = false}
futures = "0.3.17"
hex = "*"
log = {features = ["release_max_level_trace"]}
num-derive = "0.3.3"
num-traits = "0.2.14"
pkix = "0.1.1"
prost = {version = "0.8", default-features = false, features = ["prost-derive"]}
rand = "*"
rcgen = {version = "0.8.13", default-features = false}
reqwest = {version = "=0.11.4", default-features = false, features = ["json", "rustls-tls-webpki-roots"]}
ring = "0.16.20"
ring-compat = "0.4.0"
rsa = {version = "*"}
serde = "1.0.130"
serde_cbor = "=0.11.1"
serde_derive = "1.0.68"
serde_json = "1.0.68"
tokio = {version = "1.12.*", features = ["rt"]}
tokio-stream = "*"
tokio-util = "=0.6.8"
toml = "*"
tonic = {version = "0.5.2", features = ["tls"]}
tonic-rpc = {version = "0.1.1", features = ["json"]}
uuid = {version="0.8.2", features=["v4", "serde"]}
tract-core = {version = "0.18.3-pre", features=["untrusted_fs"]}
tract-onnx = {version = "0.18.3-pre", features=["untrusted_fs"]}
tract-hir = {version = "0.18.3-pre"}
x509-parser = "*"
h2 = "=0.3.4"
prost-types = "=0.8"
jsonwebtoken = "8"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
# sgx_libc = {git = "https://github.com/apache/teaclave-sgx-sdk.git"}
# sgx_trts = {git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tseal = {git = "https://github.com/apache/teaclave-sgx-sdk.git"}
# sgx_tstd = {git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"]}
sgx_types = {git = "https://github.com/apache/teaclave-sgx-sdk.git"}

[build-dependencies]
tonic-build = "0.5"
