cargo-features = ["resolver"]
[package]
name = "inference_server"
version = "0.2.2"
edition = "2018"
authors = ["Mithril Security"]
resolver = "2"
members = [
    "common"
]

[lib]
name = "inference_server" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
tonic = { version = "0.5", features = ["tls"] }
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
tokio = {version = "1.12.*", features = ["rt"]}
attestation = { path = '../../attestation/sgx/'}
pkix = "0.1.1"
anyhow = {}
env_logger ={version= "*", default-features = false}
log = {  features = ["release_max_level_trace"] }
rcgen = {version="0.8.13", default-features = false}
serde = "1.0.130"
serde_json = "1.0.68"
serde_cbor = "=0.11.1"
serde_derive = "1.0.68"
tonic-rpc = { git = "https://github.com/mithril-security/tonic-rpc.git", branch = "main" }
rpc = {path = "../../network/sgx/rpc"}
ring = "0.16.20"
reqwest = {version = "=0.11.4", default-features = false, features = ["json", "rustls-tls-webpki-roots"]}
base64 = "0.13.0"
futures = "0.3.17"
tokio-stream = "*"
tokio-util = "=0.6.8"
tract-onnx = { git = "https://github.com/mithril-security/tract-sgx-xargo.git", tag = "0.15.9-pre-range-no-fs" }
tract-core = { git = "https://github.com/mithril-security/tract-sgx-xargo.git", tag = "0.15.9-pre-range-no-fs" }
common = {path = "common"}
toml = "*"
rand = "*"
hex = "*"
x509-parser = "*"
der-parser = "*"
rsa = {version = "*"}
num-derive = "0.3.3"
num-traits = "0.2.14"

[build-dependencies]
tonic-build = "0.5"