[workspace]
resolver = "2"
members = [
    "common"
]

[package]
name = "app"
version = "1.0.0"
edition = "2018"
authors = ["Teaclave"]
build = "build.rs"

[dependencies] # You can specify the features you need for urts, such as global_exit and global_init
sgx_types = { path = "../../../sdk/sgx_types" }
sgx_urts = { path = "../../../sdk/sgx_urts" }
sgx-quote = "*"
pkix = "*"
sgx_pkix = "*"
teaclave_attestation = { path = '../../attestation/sgx/'}
env_logger = "*"
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
tonic = { version = "0.5", features = ["tls"] }
tonic-rpc = { git = "ssh://git@github.com/mithril-security/tonic-rpc.git", branch = "main", features = ["json"] }
common = {path = "common"}
x509-parser      = "0.12.0"
rpc = {path = "../../network/sgx/rpc"}
anyhow = "1.0.45"
der-parser = "6.0.0"
log = "0.4.14"
serde_json = "=1.0.69"
rustls = {version = "0.19.1", features = ["dangerous_configuration"]}   
pem = "1.0.1"
base16 = "0.2.1"
webpki = "0.21.4"
toml = "*"

[build-dependencies]
tonic-build = "0.5"