[workspace]
resolver = "2"
members = [
    "common"
]

[package]
name = "app"
version = "0.2.2"
edition = "2018"
authors = ["Mithril Security"]
build = "build.rs"

[dependencies] # You can specify the features you need for urts, such as global_exit and global_init
sgx_types = { path = "../../../sdk/sgx_types" }
sgx_urts = { path = "../../../sdk/sgx_urts" }
sgx-quote = "*"
pkix = "*"
sgx_pkix = "*"
attestation = { path = '../../attestation/sgx/'}
env_logger = "*"

reqwest =  {version = "0.11.9"}
urlencoding = "2.1.0"
hex = "0.4.3"

tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
tonic = { version = "0.5", features = ["tls"] }
tonic-rpc = { git = "https://github.com/mithril-security/tonic-rpc.git", branch = "main", features = ["json"] }
common = {path = "common"}
x509-parser      = "0.12.0"
rpc = {path = "../../network/sgx/rpc"}
anyhow = "1.0.45"
der-parser = "6.0.0"
log = "0.4.14"

# Need to pin serde_json to 1.0.69 because we can't use 1.0.70 with current compiler, see below :
# error[E0658]: use of unstable library feature 'btree_retain'
#    --> /root/.cargo/registry/src/github.com-1ecc6299db9ec823/serde_json-1.0.70/src/map.rs:263:18
#     |
# 263 |         self.map.retain(f);
#     |                  ^^^^^^
#     |
#     = note: see issue #79025 <https://github.com/rust-lang/rust/issues/79025> for more information
#     = help: add `#![feature(btree_retain)]` to the crate attributes to enable
serde_json = "=1.0.69"


# dangerous_configuration flag is needed to implement custom certificate validation
# see the self_signed_tls module
rustls = {version = "0.19.1", features = ["dangerous_configuration"]}   
pem = "1.0.1"
base16 = "0.2.1"
webpki = "0.21.4"
toml = "*"
whoami = "1.2.1"

[build-dependencies]
tonic-build = "0.5"
