[package]
name = "common"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt"]  }
tokio-stream = { version = "0.1", features = [ "net" ] }
tonic = "0.5"
tonic-rpc = { git = "ssh://git@github.com/mithril-security/tonic-rpc.git", branch = "main", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"]}
http = "0.2.5"
anyhow = "=1.0.45"